# client-python

./: .gitignore  CLAUDE.md  Makefile  README.md  TFX!  pyproject.toml
.claude/plans/: 20250423-project-restructure-design.md  20250423-project-restructure-plan.md  20250423-provider-deps-design.md  20250423-provider-deps-plan.md  2026-04-22-top-usstock-daily-data-design.md  2026-04-22-top-usstock-daily-data-plan.md  2026-04-23-opt-data-provider-design.md  2026-04-23-opt-data-provider-plan.md  2026-04-25-demo-design.md  2026-04-25-demo-plan.md
.claude/prds/: .20250423-OPT_DATA_PROVIDER.md.swp  20250422-TOP_USSTOCK_DAILY_DATA.md  20250423-OPT_CODE.md  20250423-OPT_DATA_PROVIDER.md
.github/: CODEOWNERS
data/us_list/: arca.json  nasdaq.json  nyse.json
docs/: README.md  requirements.txt
massive/rest/: __init__.py  base.py  benzinga.py  economy.py  futures.py  reference.py
massive/rest/models/: financials.py  futures.py  trades.py
massive/websocket/models/: models.py
project/us_daily/: .config.json.swp  .config.py.swp  __main__.py  agg_fetcher.py  config.json  config.py  ticker_filter.py
script/: demo_akshare_us.py
src/massive/rest/: __init__.py  base.py  reference.py
src/massive/websocket/: __init__.py
src/provider/: _config.py  akshare_fetcher.py  base.py  efinance_fetcher.py  longbridge_fetcher.py  tushare_fetcher.py  yfinance_fetcher.py
test_rest/: test_connection_pool_kw.py
tests/test_provider/: test_akshare_us.py
tests/test_us_daily/: test_agg_fetcher.py  test_config.py  test_storage.py  test_ticker_filter.py  test_ticker_lister.py
(+19 files in other folders)
