[project]
name = "massive"
version = "0.0.0"
description = "Official Massive (formerly Polygon.io) REST and Websocket client."
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "urllib3>=1.26.9",
    "websockets>=14.0",
    "certifi>=2022.5.18,<2027.0.0",
    "pandas",
    "requests",
    "tenacity",
    "fake-useragent",
    "python-dotenv",
]

[project.optional-dependencies]
efinance = ["efinance"]
akshare = ["akshare"]
tushare = ["tushare"]
pytdx = ["pytdx"]
baostock = ["baostock"]
yfinance = ["yfinance"]
# longbridge = ["longbridge-openapi"]
all = [
    "efinance",
    "akshare",
    "tushare",
    "pytdx",
    "baostock",
    "yfinance",
    # "longbridge-openapi",
]
dev = [
    "black>=24.8.0",
    "mypy>=1.19",
    "types-urllib3>=1.26.25",
    "types-certifi>=2021.10.8",
    "types-setuptools>=81.0.0",
    "pook>=2.1.4",
    "orjson>=3.11.5",
    "pytest",
]
docs = [
    "Sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-autodoc-typehints>=2.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.9"
